# float-pretty-print

./: Cargo.toml  README.md  generate_nubers_for_test.pl  generate_tests.pl  numbers.txt
examples/: repl.rs
src/: lib.rs  test.rs
